Implement Buyer Profile

--- a/BuyerProfile.Web/appsettings.json
+++ b/BuyerProfile.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "Local": "Data Source=.;Initial Catalog =BuyerProfile;Integrated Security=True"
+    "BuyerDb": "Data Source=.;Initial Catalog =BuyerProfile;Integrated Security=True",
+    "BaseDb": "Data Source=.;Initial Catalog =BaseProj;Integrated Security=True"
   },
   "EmailConfig": {
     "Email": "",
