Implement Send notif as real time with signalr

--- a/BuyerProfile.Web/appsettings.json
+++ b/BuyerProfile.Web/appsettings.json
@@ -31,5 +31,6 @@
     }
   },
   "baseUrl": "https://localhost:44337",
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "signalRApiUrl": "http://localhost:59109"
 }
